--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet">
 
-<link href="carousel.css" rel="stylesheet">
+<link href="css/carousel.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicons/1.8.0/css/devicons.min.css">
 
