--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
-
+<head>
+<title>Ryan Bernstein</title>
 <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet">
 
 <link href="css/carousel.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicons/1.8.0/css/devicons.min.css">
-
+</head>
 <!-- NAVBAR
 ================================================== -->
   <body data-target=".navbar" data-offset="60">
